  introduced main menu 'Options'
* New feature: unused class/function/global variable analysis
* New feature: find occurences for classes/functions/global variables viewers
* Bug fix: incorrect file icons in the editing history
* Bug fix: incorrect file name in the editing history after save as
* Bug fix: impossible to save non-modified file when it disappeared from disk


2012 XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>

* Release 1.5
* Ctrl+' now highlight the current word, instead of Ctrl+N. Issue #323
* Ctrl+N now creates a new file, instead of Ctrl+T. Issue #323
* Ctrl+T is now not used for anything. Issue #323
* Bug fix: no more exception while building a completion list. Issue #321
* Bug fix: removing from FS tree via a context menu did not update the view.
  Issue #325
* Bug fix: impossible to create a nested project directory
* Bug fix: do not show the 'reload' menu item for deleted file
* Bug fix: saving as into a file which is opened in another tab. Issue #317
* Bug fix: updating project properties when a script name is empty
* Python built in functions (as of python 2.7) are now highlighted as keywords
* File encoding is displayed and can be changed via a context menu. Issue #69
* New feature: the editor context menu
* New feature: Alt+U tp jump to the first line of the current function or
  class. Issue #316
* New feature: dumb line counter for the buffer. Issue #107
* Open project via an OS file selection dialog (Ctrl+Shift+O)
* Main menu has been added
* Bug fix: hot keys on Ubuntu
* Bug fix: imports diagram reset scale action
* Replacing Ctrl++ with Ctrl+= for zooming in
* Adding the editor edge column number to the settings file


2012 Jan 26  Sergey Satskiy <sergey.satskiy@gmail.com>

* Release 1.4
* Bug fix: proper search result window notifications that a buffer has changed.
* Improvement: no unnecessary scrolling of a buffer if a line to which jump is
  requested is visible on the screen.